[gd_scene load_steps=6 format=3 uid="uid://djna2o8otep4p"]

[ext_resource type="Texture2D" uid="uid://3cat06o2fndd" path="res://Sprites/Bosses/Gabija/small_metal_spike_03.png" id="1_7nlhn"]
[ext_resource type="Script" path="res://Scripts/ground_spike.gd" id="1_jg1gg"]

[sub_resource type="Animation" id="Animation_xb86o"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.3, 0.0151515), Vector2(0.3, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 32.5), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionPolygon2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(0, 33, -8, 33, 8, 33), PackedVector2Array(0, -24, -9, 26, 9, 26)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitArea/CollisionPolygon2D:polygon")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(-9, 33, 0, 33, 9, 33), PackedVector2Array(-10, 26, 0, -28, 10, 26)]
}

[sub_resource type="Animation" id="Animation_wf1xe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.3, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 30)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionPolygon2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(0, -27, -10, 26, 10, 26)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitArea/CollisionPolygon2D:polygon")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-9, 33, 0, 33, 9, 33)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fisdj"]
_data = {
"RESET": SubResource("Animation_wf1xe"),
"spawn": SubResource("Animation_xb86o")
}

[node name="GroundSpike" type="AnimatableBody2D"]
scale = Vector2(5, 5)
script = ExtResource("1_jg1gg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 30)
scale = Vector2(0.3, 1)
texture = ExtResource("1_7nlhn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fisdj")
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -27, -10, 26, 10, 26)

[node name="HitArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitArea"]
polygon = PackedVector2Array(-9, 33, 0, 33, 9, 33)

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
